# json-canonical-rfc-8785

./: .gitignore  README.md  pyproject.toml  seqcol_comparison_issue.md  seqcol_summary_suggestion.md
src/ga4gh_json_canonical/: __init__.py  core.py  functions.py  util.py
src/jsoncanon/: __init__.py  core.py  functions.py  util.py
tests/: test_core.py  test_functions.py  test_ga4gh_json_canonical.py  test_util.py
tests/json-canonicalization/: LICENSE.md
tests/json-canonicalization/test/: verify-canonicalization.py  verify-numbers.py
tests/json-canonicalization/testdata/: es6testfile10k.txt  numgen.js
